Fix missing border under the buttons

--- a/assets/style.css
+++ b/assets/style.css
@@ -41,6 +41,10 @@ h1 {
 
 /*#region PageHeader */
 
+.page_header{
+    border-bottom: solid rgb(246, 248, 249);
+}
+
 main {
     margin-left: 13rem;
     margin-top: 2rem;
@@ -52,6 +56,7 @@ main {
     padding: 0.5rem 1rem;
     border-radius: 5px;
     color: white;
+    margin-bottom: 3rem;
 }
 
 #addsection {
@@ -62,6 +67,8 @@ main {
     width: 7rem;
     text-align: center;
 }
+
+
 
 /*#endregion PageHeader */
 
